bk_ida/gccida/c2/get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1188:10: error: use of undeclared identifier 'get_frame_alias_set_set'; did you mean 'get_frame_alias_set'?
result = get_frame_alias_set_set; 
         ^~~~~~~~~~~~~~~~~~~~~~~
         get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1184:10: note: 'get_frame_alias_set' declared here
__int64  get_frame_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1189:6: error: use of undeclared identifier 'get_frame_alias_set_set'; did you mean 'get_frame_alias_set'?
if ( get_frame_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~
     get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1184:10: note: 'get_frame_alias_set' declared here
__int64  get_frame_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1193:10: error: use of undeclared identifier 'new_alias_set_last_alias_set'
result = new_alias_set_last_alias_set + 1; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1194:1: error: use of undeclared identifier 'new_alias_set_last_alias_set'
new_alias_set_last_alias_set = result; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1195:1: error: use of undeclared identifier 'get_frame_alias_set_set'
get_frame_alias_set_set = result; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/alias.c:1200:1: error: use of undeclared identifier 'get_frame_alias_set_set'
get_frame_alias_set_set = 0LL; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_frame_alias_set/src/obj/alias.o] Error 1
